Revision history for {{$dist->name}}

{{$NEXT}}
 [Dependencies::Stats]
 - Dependencies changed since 1.000003, see misc/*.deps* for details
 - develop: +1 (suggests: ↑1)

1.000003 2014-08-03T12:37:40Z
 [00 Trivial]
 - Migrate github links to org ( was advised in last release ... was wrong -_- )

 [Dependencies::Stats]
 - Dependencies changed since 1.000002, see misc/*.deps* for details
 - configure: ↓1
 - develop: (suggests: ↑1)
 - test: -4 (recommends: ↑1 -2)

1.000002 2014-07-25T06:22:28Z
 [00 Trivial]
 - Newer report versions script autoadded.

 [Dependencies::Stats]
 - Dependencies changed since 1.000001, see misc/*.deps* for details
 - develop: (suggests: ↑1)
 - test: +2 ↑1 (recommends: +1)

1.000001 2014-07-13T18:11:06Z
 [00 Trivial]
 - Minor packaging changes.

 [Dependencies::Stats]
 - Dependencies changed since 1.000000, see misc/*.deps* for details
 - configure: (recommends: ↑1)
 - develop: +3 -3 (suggests: +2 -1)
 - test: (recommends: ↑2)

1.000000 2014-02-02T07:19:39Z
 [00 Major]
 - Toolkit switched to EUMM
 - Toolkit deps softened to recommendations.
 - Version moved to mantissa = 6 ( primary reason for 0 → 1 )

 [Dependencies::Aggregate]
 - 5.008 : was 197 → 199 :(
 - 5.010 : was 178 → 184 :(
 - 5.019 : was 161 → 164 :(
 - Growth induced in dependencies.
 - Limited by DZIL → Path::Class → Module::Build

 [Dependencies::Stats]
 - Dependencies changed since 0.01015824, see misc/*.deps* for details
 - build: -1
 - configure: +1 -1 (recommends: +1)
 - develop: +7 ↑1 -9
 - runtime: +1 ↑1
 - test: +4 ↓1 (recommends: +4)

0.01015824 2013-11-21T10:47:13Z
 [00 Maintenance]

 [Dependencies::Noteworthy]
 - Ramp MB and TM

 [Dependencies::Stats]
 - Dependencies changed since 0.01015823, see misc/*.deps* for details
 - build: ↑1
 - configure: ↑1
 - develop: +45 -1 (recommends: -1, suggests: +1 -1)
 - test: ↑1 -2

 [Packaging]
 - use new fallback code for MB

 [Tests]
 - Replace Test::Compile with Test::Compile::PerFile
 - Regen ReportVersions to hide devel deps