@@ -4,7 +4,7 @@ author           = Kent Fredric <kentnl@cpan.org>
 license          = Perl_5
 copyright_holder = Kent Fredric <kentnl@cpan.org>
 
-; Uncomment this to bootstrap via self 
+; Uncomment this to bootstrap via self
 ; [Bootstrap::lib]
 
 [@Author::KENTNL]
