@@ -20,7 +20,7 @@ $bundle->configure;
 
 my @stopwords = (
   qw(
-    KENTNL DZil
+    KENTNL DZil dzil
     )
 );
 for my $wordlist (@stopwords) {
@@ -35,7 +35,7 @@ $bundle->remove_policy('ErrorHandling::RequireUseOfExceptions');
 #$bundle->remove_policy('CodeLayout::RequireUseUTF8');
 
 #$bundle->remove_policy('ErrorHandling::RequireCarping');
-#$bundle->remove_policy('NamingConventions::Capitalization');
+$bundle->remove_policy('NamingConventions::Capitalization');
 
 my $inf = $bundle->actionlist->get_inflated;
 
