@@ -1,11 +1,29 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
-1.000004
+1.001000
  [Added / develop requires]
+ - Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes 0.001001
  - Dist::Zilla::Plugin::Git::Contributors 0.006
 
+ [Added / runtime recommends]
+ - Test::More 1.001003
+
+ [Added / runtime requires]
+ - Data::DPath
+ - Moose
+ - Path::Tiny
+ - Test::Fatal
+ - Test::More 0.89
+
+ [Changed / develop requires]
+ - Test::Kwalitee 1.12 → 1.21
+
  [Changed / develop suggests]
- - Dist::Zilla::PluginBundle::Author::KENTNL 2.016007 → 2.017002
+ - Dist::Zilla::App::Command::bakeini 0.001001 → 0.001002
+ - Dist::Zilla::PluginBundle::Author::KENTNL 2.016007 → 2.019000
+
+ [Removed / test requires]
+ - Test::Fatal
 
 1.000003 2014-08-03T12:37:40Z
  [Changed / configure requires]
