@@ -1,11 +1,16 @@
 This file contains changes to DEVELOPMENT dependencies only ( both REQUIRED and OPTIONAL )
 
-1.000004
+1.001000
  [Added / develop requires]
+ - Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes 0.001001
  - Dist::Zilla::Plugin::Git::Contributors 0.006
 
+ [Changed / develop requires]
+ - Test::Kwalitee 1.12 → 1.21
+
  [Changed / develop suggests]
- - Dist::Zilla::PluginBundle::Author::KENTNL 2.016007 → 2.017002
+ - Dist::Zilla::App::Command::bakeini 0.001001 → 0.001002
+ - Dist::Zilla::PluginBundle::Author::KENTNL 2.016007 → 2.019000
 
 1.000003 2014-08-03T12:37:40Z
  [Changed / develop suggests]
